--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,8 @@
 # editorconfig.org
-
 root = true
 
 [*]
-indent_styles = spaces
+indent_style = spaces
 indent_size = 2
 end_of_line = lf
 charset = utf-8
