--- a/package.json
+++ b/package.json
@@ -20,12 +20,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
+    "@babel/helper-create-regexp-features-plugin": "^7.12.17",
     "@babel/preset-typescript": "^7.10.1",
-    "@storybook/addon-actions": "6.2.9",
-    "@storybook/addon-knobs": "6.2.9",
-    "@storybook/addon-links": "6.2.9",
-    "@storybook/addons": "6.2.9",
-    "@storybook/react": "6.2.9",
+    "@storybook/addon-essentials": "6.0.10",
+    "@storybook/react": "6.0.10",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
     "@types/jest": "^26.0.3",
